@@ -1,7 +1,11 @@
 choose-mirror (2.25) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Remove Martin Sjogren and Matt Kraai as Uploaders with many thanks for
     their past contributions.
+
+  [ Joey Hess ]
+  * mirror_root can return null. If it does, flag the mirror as invalid.
 
  -- Frans Pop <fjp@debian.org>  Tue, 08 Apr 2008 13:24:26 +0200
 
